# sfb

./: .gitignore  MANIFEST.in  README.md  executer.py  pyproject.toml  setup.py  setup.sh  setup_test.py  setup_testpypi.py
.github/workflows/: ci.yml
config/: sfb.yaml
sfb/: __init__.py  bq.py  config.py  entrypoint.py  estimator.py  fx.py  logger.py  main.py
sfb/cli/: main.py
sfb/config/: config.yaml  sfb.yaml
sfb/dryrun/: estimation.py
sfb/services/: bq.py  estimator.py
sql/: covid19_open_data.covid19_open_data.sql  usa_names.usa_1910_2013.sql
src/: __init__.py  estimation.py
tests/: conftest.py  test.py  test_bq.py  test_config.py  test_entrypoint.py  test_estimator.py
tests/config/: sfb.yaml
tests/sql/: crypto_bitcoin.transactions.sql  test_failure_badrequest_01.sql  test_failure_badrequest_02.sql  test_failure_notfound.sql  test_success.sql
